增加样例配置，增加规则的描述字段

--- a/desensitization-tool-parent/desensitization-tool/pom.xml
+++ b/desensitization-tool-parent/desensitization-tool/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.gungnirlaevatain</groupId>
+            <artifactId>desensitization-tool-annotation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
