尝试使用aop的方式对返回结果进行脱敏

--- a/desensitization-tool-parent/pom.xml
+++ b/desensitization-tool-parent/pom.xml
@@ -12,6 +12,7 @@
         <module>desensitization-tool</module>
         <module>desensitization-tool-sample</module>
         <module>desensitization-tool-annotation</module>
+        <module>desensitization-tool-aop</module>
     </modules>
 
     <developers>
